--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Маяк Armstrong (PWA)</title>
+  <title> Armstrong Маяк© (PWA)</title>
 
   <!-- Підключення PWA -->
   <link rel="manifest" href="manifest.json">
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h2>Маяк Armstrong</h2>
+  <h2>Armstrong Маяк© </h2>
 
   <!-- ================================ -->
   <!-- Калькулятор -->
@@ -105,4 +105,5 @@
     }
   </script>
 </body>
+
 </html>
